query fix
