# src/swagger/swagger.json
@@ -180,6 +180,46 @@
 		"contact": {}
 	},
 	"paths": {
+		"/technicians": {
+			"get": {
+				"operationId": "GetAllJob",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"data": {},
+										"message": {
+											"type": "string"
+										},
+										"success": {
+											"type": "boolean"
+										}
+									},
+									"required": [
+										"data",
+										"message",
+										"success"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Technicians"
+				],
+				"security": [
+					{
+						"jwt": []
+					}
+				],
+				"parameters": []
+			}
+		},
 		"/job/create": {
 			"post": {
 				"operationId": "CreateJob",
